external-proxy/egress/http-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/nativeSidecar: 'true'
      creationTimestamp: null
      labels:
        app: http
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          imagePullPolicy: Always
          name: container
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
