external-proxy/egress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-egressgateway
spec:
  type: ClusterIP
  selector:
    istio: egressgateway
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
