external-proxy/egress/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: egress-gateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.google.com"
  - port:
      number: 443
      name: https
      protocol: TLS
    hosts:
    - "*.google.com"
    tls:
      mode: PASSTHROUGH
