external-proxy/egress/se-squid.yml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: squid
spec:
  exportTo:
  - "*"
  endpoints:
    - address: ip.ip.ip.ip
  hosts:
    - squid-proxy.local
  location: MESH_EXTERNAL
  ports:
    - name: http-8443
      number: 8443
      protocol: HTTP
      targetPort: 8443
  resolution: STATIC
